# cvAutotrack.old

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  cvAutoTrack.sln
cmake/: deploy.ps1  generate_version.cmake  third_party.cmake
cvAutoTrack/: CMakeLists.txt  cvAutoTrack.vcxproj  cvAutoTrack.vcxproj.filters
cvAutoTrack/include/: cvAutoTrack.h
cvAutoTrack/src/: AutoTrack.cpp  AutoTrack.h  ErrorCode.cpp  ErrorCode.h  Ver.h  cvAutoTrack.cpp  dllmain.cpp  pch.h  resource.h
cvAutoTrack/src/algorithms/: algorithm.match_preprocess.h  algorithms.direction.h  algorithms.rotation.h
cvAutoTrack/src/capture/dxgi/: Dxgi.cpp
cvAutoTrack/src/downloader/: cfiledownloader.h  cfiledownloaderasync.h
cvAutoTrack/src/filter/: Filter.h
cvAutoTrack/src/frame/: frame.include.cpp  frame.include.h
cvAutoTrack/src/frame/capture/: capture.bitblt.h  capture.dxgi.h  capture.include.h  capture.window_graphics.cpp  capture.window_graphics.h
cvAutoTrack/src/frame/capture/utils/: utils.window_graphics.h  utils.window_scale.h
cvAutoTrack/src/genshin/: genshin.h  genshin.handle.cpp  genshin.handle.h  genshin.minimap.cpp  genshin.minimap.h  genshin.screen.cpp  genshin.screen.h
cvAutoTrack/src/genshin/match/position/: genshin.match.position.cpp  genshin.match.position.h
cvAutoTrack/src/match/: FlannIndex.cpp  FlannIndex.h  IMatcher.cpp  IMatcher.h  InertialNavigator.h  LinearSolve.cpp  LinearSolve.h  match.star.h  match.uid.h  tracking.cpp  tracking.h
cvAutoTrack/src/match/algorithm/: FaissIndexedMatcher.cpp  FaissIndexedMatcher.h  FlannIndexedMatcher.cpp  FlannIndexedMatcher.h  IBFMatchAlgorithm.h  IIndexedMatchAlgorithm.h  OpenCVBFMatcher.cpp  OpenCVBFMatcher.h
cvAutoTrack/src/match/detector/: FASTFeatureDetector.cpp  FASTFeatureDetector.h
cvAutoTrack/src/match/diff/: DiffMatch.cpp  DiffMatch.h
cvAutoTrack/src/match/matcher_impl/: AkazeMatcher.cpp  AkazeMatcher.h  FAST_AKAZEMatcher.cpp  FAST_AKAZEMatcher.h  FAST_SURFMatcher.cpp  FAST_SURFMatcher.h  FAST_TEBLIDMatcher.cpp  FAST_TEBLIDMatcher.h  ORBMatcher.cpp  ORBMatcher.h  SURFMatcher.cpp  SURFMatcher.h
cvAutoTrack/src/match/sift/: SiftMatch.cpp  SiftMatch.h
cvAutoTrack/src/match/surf/: SurfMatch.cpp  SurfMatch.h
cvAutoTrack/src/match/type/: MatchType.h
cvAutoTrack/src/resources/: KeypointsCache.cpp  KeypointsCache.h  Resources.cpp  Resources.h  gimap_downloader.cpp  gimap_downloader.h  map_mapper.h  map_mapper_config.h  resources.load.cpp  resources.load.h  serialize.h
cvAutoTrack/src/resources/binary/: generate_all.ps1  image_to_binary.bat  resources.binary.cpp  resources.binary.h
cvAutoTrack/src/resources/binary/image/: resources.binary.image.h
cvAutoTrack/src/resources/binary/image/icon/: resources.binary.image.icon_quest.h  resources.binary.image.icon_sight.h
cvAutoTrack/src/resources/binary/image/uid/: resources.binary.image.uid0.h  resources.binary.image.uid1.h  resources.binary.image.uid2.h  resources.binary.image.uid3.h  resources.binary.image.uid4.h  resources.binary.image.uid5.h  resources.binary.image.uid6.h  resources.binary.image.uid7.h  resources.binary.image.uid8.h  resources.binary.image.uid9.h  resources.binary.image.uid_.h
cvAutoTrack/src/resources/import/: resources.import.cpp  resources.import.h
cvAutoTrack/src/utils/: Utils.cpp  Utils.h  map_mapper.h  utils.progress.cpp  utils.progress.h
cvAutoTrack/src/utils/log/: cvat_logger.cpp  cvat_logger.h
impl/CSharp/TEST_cvAutoTrack_CSharp/: TEST_cvAutoTrack_CSharp.csproj  cvAutoTrackCSharpImpl.cs
impl/Cpp/TEST_cvAutoTrack_Cpp/: CMakeLists.txt  TEST_cvAutoTrack_Cpp.cpp  TEST_cvAutoTrack_Cpp.vcxproj
script/: genFileList.py  save_avif.py  split_map.py
test/TEST_FakeGI/: TEST_fakeGI.vcxproj  TEST_fakeGI.vcxproj.filters  fakeGI.cpp  fakeGI.h  fakeGI.qrc  fakeGI.ui  main.cpp
